# stumppadeth

./: CMakeLists.txt  README.md  default.vert  main.cpp  shader.h  vbo.cpp  vbo.h
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
